--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,10 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.5"
     implementation "com.jakewharton.threetenabp:threetenabp:1.2.4"
 
+    implementation "androidx.activity:activity:1.3.1"
+    implementation "androidx.activity:activity-ktx:1.3.1"
+    implementation "androidx.activity:fragment:1.3.6"
+    implementation "androidx.activity:fragment-ktx:1.3.6"
     implementation "androidx.work:work-runtime-ktx:2.4.0"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.1'
