Partially implemented new flow

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
             />
 
         <activity
+            android:name=".emotionhelp.EmotionHelpActivity"
+            android:label="@string/title_activity_view_entries"
+            android:theme="@style/AppTheme.NoActionBar"
+            />
+
+        <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings"
             android:theme="@style/AppTheme.NoActionBar"
